owncloud-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: owncloud-ingress
  namespace: owncloud-namespace
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: "nginx"
  rules:
  - host: "owncloud.almarey.work"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: owncloud
            port:
              number: 80
